refactor(Game): 문자열 검사 메서드 이름 변경
빈 문자열 검사 메서드 이름 변경:
checkEmpty() -> checkNameEmpty()
문자열 길이 검사 메서드 이름 변경:
checkLength() -> checkNameLength()
변경 사유: 더 직관적인 이름으로 수정이 필요하다고 판단함.